--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 
 </body>
-	<div class="bm">
-		This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test casees
+	<div class="box">
+		This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test casees.
 	</div>
 </html>
